[tool.poetry]
name = "proxies"
version = "0.1.0"
description = ""
authors = ["sny <127958265+kyofu95@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
sqlalchemy = "^2.0.15"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
requests = "^2.31.0"
geoip2 = "^4.7.0"
flask-wtf = "^1.1.1"
apscheduler = "^3.10.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
flask-restx = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env_files = [
  ".test.env",
]
pythonpath = [
  "proxies",
]
testpaths = [
  "tests",
]

[tool.black]
line-length = 120