[tool.poetry]
name = "proxies"
version = "1.0.0"
description = ""
authors = ["sny <127958265+kyofu95@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
sqlalchemy = "^2.0.15"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
requests = "^2.31.0"
geoip2 = "^4.7.0"
flask-wtf = "^1.1.1"
apscheduler = "^3.10.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
flask-restx = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"
ruff = "^0.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env_files = [
  "test.env",
]
pythonpath = [
  "proxies",
]
testpaths = [
  "tests",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D404"]